...
            android:text="If you do not have an account "
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/login_user_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:textColor="@color/accent_blue"
            android:textSize="14sp"
            android:textStyle="bold"
...
